[gd_scene load_steps=4 format=3 uid="uid://bu4yt23k4jfuu"]

[ext_resource type="Script" path="res://node_2d.gd" id="1_8lycw"]
[ext_resource type="Texture2D" uid="uid://bo3l02owb8slj" path="res://Pictures/CarBackground.png" id="2_upibu"]
[ext_resource type="PackedScene" uid="uid://c3257muq215js" path="res://Main.tscn" id="2_whb4x"]

[node name="GameArea" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8lycw")
destination_options = Array[PackedScene]([ExtResource("2_whb4x")])

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_upibu")
expand_mode = 3
stretch_mode = 5

[node name="Top" type="Button" parent="."]
custom_minimum_size = Vector2(500, 25)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -4.0
offset_right = 4.0
offset_bottom = 8.0
grow_horizontal = 2

[node name="Bottom" type="Button" parent="."]
custom_minimum_size = Vector2(500, 25)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0

[node name="Left" type="Button" parent="."]
custom_minimum_size = Vector2(25, 150)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -4.0
offset_right = 8.0
offset_bottom = 4.0
grow_vertical = 2

[node name="Right" type="Button" parent="."]
custom_minimum_size = Vector2(25, 150)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 2

[connection signal="pressed" from="Top" to="." method="_on_top_pressed"]
[connection signal="pressed" from="Bottom" to="." method="_on_bottom_pressed"]
[connection signal="pressed" from="Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_right_pressed"]
